--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ build_book:
 pages:
   stage: deploy
   dependencies:
-    - build_doxygen
+    - build
   script:
     - mv docs public
   artifacts:
