Change submodule URL

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "submodule/monolis_utils"]
 	path = submodule/monolis_utils
-	url = git@gitlab.com:morita/monolis_utils.git
+	url = https://gitlab.com/morita/monolis_utils.git
+
