--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,6 +21,8 @@ test_gedatsu:
   script:
     - cd src_test
     - ./run.CI.sh
+    - cd ../wrapper_test
+    - ./run.sh
   dependencies:
     - build_gedatsu
 
