--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,8 @@ build_gedatsu:
   artifacts:
     paths:
       - bin
-      - test
+      - src_test
+      - wrapper_test
 
 test_gedatsu:
   stage: test
