--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,7 +30,9 @@ test_gedatsu:
 doxygen_gedatsu:
   stage: doxy_build
   script:
-    - cd manual
+    - cd manual/fortran
+    - doxygen
+    - cd ../c
     - doxygen
   artifacts:
     paths:
@@ -41,7 +43,9 @@ pages:
   dependencies:
     - doxygen_gedatsu
   script:
-    - mv manual/html public
+    - mkdir public
+    - mv manual/fortran/html public/fortran
+    - mv manual/c/html public/c
   artifacts:
     paths:
       - public
