--- a/sample/dlb_test/Makefile
+++ b/sample/dlb_test/Makefile
@@ -8,10 +8,10 @@ OBJS = main.o
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
-	$(FC) -o $@ $(OBJS) -L../../lib -lgedatsu -lparmetis -lmetis -lGKlib
+	$(FC) -o $@ $(OBJS) -L../../lib -lgedatsu -L../../submodule/monolis_utils/lib -lmonolis_utils -lparmetis -lmetis
 
 %.o: %.f90
-	$(FC) $(FFLAGS) -I../../include -o $@ -c $<
+	$(FC) $(FFLAGS) -I../../include -I../../submodule/monolis_utils/include -o $@ -c $<
 
 clean:
 	rm a.out
