Update METIS repo

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 
 [submodule "submodule/METIS"]
 	path = submodule/METIS
-	url = https://github.com/KarypisLab/METIS.git
+	url = https://github.com/nqomorita/METIS.git
